--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,11 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
+### Day 6: Experimental
+
+```{r echo=FALSE}
+knitr::include_graphics('plots/Day6-Experimental.png')
+```
 
 
 ### Day 5: Slope
